8285301: C2: assert(\!requires_atomic_access) failed: can't ensure atomicity